# QT-Education-interactive-app

./: .gitignore  CHANGE.md  CMakeLists.txt  README.md
src/: main.cpp
src/core/: DocumentManager.cpp  DocumentManager.h
src/resources/: resources.qrc
src/resources/style/: buttons.qss  global.qss  inputs.qss  tabs.qss
src/ui/: PdfViewerWidget.cpp  PdfViewerWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
